--- a/static/css/register_style.css
+++ b/static/css/register_style.css
@@ -71,9 +71,8 @@ h2 {
 }
 
 .form-group label {
-    display: block;
-    text-align: left;
     margin-bottom: 5px;
+    margin-right:10px;
 }
 
 .form-group input {
@@ -82,7 +81,12 @@ h2 {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
+.form-group select {
+    width: calc(100% - 46.5px);
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 form button {
     width: 100%;
     padding: 10px;
