--- a/templates/register.html
+++ b/templates/register.html
@@ -45,10 +45,16 @@
             </div>
 
             <div class="form-group">
-                <input type="text" name="city" placeholder="CITY" value="{{ form.city.value|default_if_none:'' }}" required>
-                {% if form.city.errors %}
-                <div class="error">{{ form.city.errors|first }}</div>
-                {% endif %}
+                    <label for="city">City:</label>
+                    <select id="city" name="city" required>
+                        <option value="Glasgow" {% if form.city.value == "Glasgow" %}selected{% endif %}>Glasgow</option>
+                        <option value="Edinburgh" {% if form.city.value == "Edinburgh" %}selected{% endif %}>Edinburgh</option>
+                        <option value="Stirling" {% if form.city.value == "Stirling" %}selected{% endif %}>Stirling</option>
+                        <option value="Aberdeen" {% if form.city.value == "Aberdeen" %}selected{% endif %}>Aberdeen</option>
+                    </select>
+                    {% if form.city.errors %}
+                    <div class="error">{{ form.city.errors|first }}</div>
+                    {% endif %}
             </div>
 
             <div class="form-group">
@@ -103,6 +109,7 @@
                 document.querySelector('.choice-container').style.display = 'none';
             }
         });
+
     </script>
 </body>
 </html>
