--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -14,14 +14,12 @@ Company Information
         overflow-y: auto;
         padding: 20px;
     }
-    /* Modal Content Style */
 .modal-content {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Modal Header Style */
 .modal-header {
     border-bottom: 1px solid #eee;
     padding: 20px;
@@ -34,7 +32,6 @@ Company Information
     font-weight: 600;
 }
 
-/* Modal Body Style */
 .modal-body {
     padding: 20px;
 }
@@ -64,13 +61,11 @@ select {
     cursor: pointer;
 }
 
-/* Modal Footer Style */
 .modal-footer {
     padding: 20px;
     border-top: 1px solid #eee;
 }
 
-/* Buttons Style */
 .btn-primary {
     background-color: #007bff;
     border-color: #007bff;
@@ -123,6 +118,7 @@ select {
                 align-items:center;
                 max-width:30%;
                 overflow:hidden;
+
 }
 .user-image img{
                 max-width:100%;
@@ -132,6 +128,21 @@ select {
                 border-radius: 5px;
                 border: 3px solid #098faae1;
                 box-shadow: 0 0 5px rgba(0,0,0,0.2);
+                transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+}
+.user-image img:hover {
+    transform: scale(0.95);
+    border-color: #ff8c00;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.star {
+      display: inline-block;
+      margin-right: 10px;
+      font-size: 32px;
+}
+.star.full {
+      color: #f8d150;
 }
 </style>
 
@@ -574,11 +585,15 @@ jobIds.forEach(function(jobId) {
             var feedbacksHtml = '';
             response.feedbacks.forEach(function (feedback) {
                 var jobDetailUrl = jobDetailBaseUrl + jobId + '/';
+                var starsHtml = '';
+                for (let i = 1; i <= 5; i++) {
+                    starsHtml += feedback.rate >= i ? '<span class="star full">&#9733;</span>' : '<span class="star">&#9733;</span>';
+                }
                 feedbacksHtml += ` 
                         <a href="${jobDetailUrl}" class="list-group-item list-group-item-action">
                             <div class="d-flex w-100 justify-content-between my-2">
                                 <h5 class="mb-1 text-primary">${feedback.job__title}</h5>
-                                <small>Rated: ${feedback.rate}/5</small>
+                                <div>${starsHtml}</div>
                             </div>
                             <p class="mb-1">User: ${feedback.user__user_name}</p>
                             <p class="mb-1">Comment: ${feedback.comment}</p>
@@ -642,7 +657,7 @@ jobIds.forEach(function(jobId) {
                 contentType: 'application/json',
                 data: JSON.stringify(formData),
                 beforeSend: function(xhr) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); // 添加CSRF令牌
+                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
                 },
                 success: function(response) {
                     alert("User information updated successfully");
@@ -684,7 +699,7 @@ jobIds.forEach(function(jobId) {
                 processData: false,
                 contentType: false,
                 beforeSend: function(xhr, settings) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); // 添加CSRF令牌头
+                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
                 },
                 success: function(response) {
                     $('#editJobModal').modal('hide');
@@ -723,7 +738,7 @@ jobIds.forEach(function(jobId) {
                 processData: false,
                 contentType: false,
                 beforeSend: function(xhr, settings) {
-                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); // 添加CSRF令牌头
+                    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
                 },
                 success: function(response) {
                     $('#editJobModal').modal('hide');
