--- a/templates/jobSeekerInfo.html
+++ b/templates/jobSeekerInfo.html
@@ -78,6 +78,7 @@ Job Seeker Information
                 align-items:center;
                 max-width:30%;
                 overflow:hidden;
+
     }
     .user-image img{
                 max-width:100%;
@@ -87,6 +88,12 @@ Job Seeker Information
                 border-radius: 5px;
                 border: 3px solid #098faae1;
                 box-shadow: 0 0 5px rgba(0,0,0,0.2);
+                transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+    }
+    .user-image img:hover {
+        transform: scale(0.95);
+        border-color: #ff8c00;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
 </style>
 
@@ -248,7 +255,7 @@ Job Seeker Information
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript">
-    //获取没有 job_id 的 URL
+
     var jobDetailBaseUrl = "{% url 'job_detail' job_id=0 %}".replace('/0/', '/');
     var deleteApplicationUrlTemplate = '{% url "delete_application" application_id=0 %}'.replace('/0/', '/');
     var deleteFeedbackUrlTemplate = '{% url "delete_feedback" feedback_id=0 %}'.replace('/0/', '/');
